--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="next">Next</string>
     <string name="rate">Rate :</string>
     <string name="remove">Remove</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="order">Order</string>
+    <string name="orderdetail">Order Details</string>
 </resources>
