Succesfully Added Signing Configuration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,18 @@
     <string name="order">Order</string>
     <string name="orderdetail">Order Details</string>
     <string name="item">Pizza</string>
+    <string name="cod">Place Order\n(Cash On Delivery)</string>
+    <string name="login">Login</string>
+    <string name="createacc">Create Account</string>
+    <string name="succesfullyupload">SUCCESSFULLY UPLOADED</string>
+    <string name="orderplaced">Order Places And Ordered is Added To Widget</string>
+    <string name="emailreq">Email ID Required</string>
+    <string name="passreq">Password Required</string>
+    <string name="authfail">Authentication Failed</string>
+    <string name="nointernet">No Internet Connectivity</string>
+    <string name="zipcode">Zip Code</string>
+    <string name="landmark">Landmark</string>
+    <string name="address">Address</string>
+    <string name="signout">Signout</string>
+
 </resources>
